# kgi

freebsd/: COPYRIGHT  Developers  License  ReadMe
html/: Makefile
html/kgi.sourceforge.net/: .configure  Makefile  kgi-project.jpeg.uue  menu  template.htf  welcome.en.htf
kgi-0.9/: COPYRIGHT  COPYRIGHT.MIT  Makefile  README.install  configure
kgi-0.9/doc/: glossary.sgml  sourcetree.sgml
kgi-0.9/kgi/: .configure  Makefile
kgi-0.9/lib/libggi/: .configure  Makefile  Makefile.am  Makefile.in  acconfig.h  aclocal.m4  config.h.in  configure  configure.in  mkinstalldirs
kgi-0.9/lib/libggi/display/: Makefile.am  Makefile.in
kgi-0.9/lib/libggi/display/kgi/: Makefile.am  Makefile.in  event.c  mode.c  resource.c  visual.c
kgi-0.9/lib/libggi/include/ggi/: Makefile.am  api.h  ggi.h
kgi-0.9/lib/libggi/include/ggi/display/: Makefile.am  Makefile.in  kgi.h
kgi-0.9/lib/libggi/m4/: Makefile.am
kgi-0.9/lib/libggi/src/: Makefile  dll.c  libGGI.c
kgi-0.9/lib/libggi/src/GGI/: KGI.c  Makefile  api.c
kgi-0.9/lib/libkgi/demos/: Makefile  Makefile.am  Makefile.in  accel  accel.c  master  master.c  shut  slave  slave.c  text16  text16.c
newtree/fbsd/: kgi_pager.c.diff  kgi_pager.h.diff  kgia.c.diff  sys-patch.diff
newtree/kgc/: default-font-ibm437  default-font-ibm437-08x14  default-ptr  kgc_backgnd.c  kgc_backgnd.h  kgc_bgndpcx.c  kgc_compatlinux.c  kgc_console.h  kgc_daemon.c  kgc_emudumb.c  kgc_emudumb.h  kgc_emuxterm.c  kgc_emuxterm.h  kgc_gfbdflt.c  kgc_gfbrndr.c  kgc_gfbrndr.h  kgc_isodflt.c  kgc_isorndr.c  kgc_isorndr.h  kgc_kgirndr.c  kgc_kgirndr.h  kgc_mapper.c  kgc_render.c  kgc_render.h  kgc_scroller.c  kgc_scroller.h  kgc_textbuf.c  kgc_textbuf.h  kgc_textscroller.c  render_if.m  scroller_if.m
newtree/kgi/: NOTES  RELEASE  accel.h  compiler.h  config.h  debug.h  graphic.h  i386-compiler.h  io.h  kgi.h  kgi_core.c  kgi_daemon.c  kgi_dpynull.c  kgi_sysatomic.c  kgi_sysmem.c  kgi_sysmutex.c  kgi_syspci.c  kgicmd.h  kgidbg.h  kgidpy.h  kgierr.h  kgii.h  kgimod.h  kgires.h  kgityp.h  kgu_accel.c  kgu_command.c  kgu_graphic.c  kgu_map.c  kgu_mmio.c  kgu_resource.c  maintainers.h  mmio.h  pci.h  system.h  types.h
newtree/kgim/: kgim.c  module.h
newtree/kgy/: kgy.h  kgy_disp.c  kgy_mode.c  kgy_splash.c  kgy_text16.c
newtree/kii/: event.h  kii.h  kii_action.c  kii_core.c  kiicmd.h  kiierr.h  kiisyms.h  kiu_event.c
newtree/kip/: kip.h  kip_defaults.c  kip_kbdriver.c  kip_keymap.c  kip_modifiers.c  kip_symbols.c
newtree/scemul/: sce_bootconsole.c  sce_scmouse.c  sce_syscons.h  sce_sysmouse.c  sce_vtconsole.c
tools/: README  configure
tools/00gmake/: rules  (+1 more)
(+1046 files in other folders)
