INCLUDES = -I${top_srcdir}/include
LDADD = ${top_builddir}/lib/libkgi.la

# findleaks.c showaccel2.c tunemode.c
noinst_PROGRAMS = text16 master slave accel

text16_LDADD =  ${top_builddir}/lib/libkgi.la
master_LDADD =  ${top_builddir}/lib/libkgi.la
slave_LDADD =  ${top_builddir}/lib/libkgi.la
accel_LDADD =  ${top_builddir}/lib/libkgi.la

EXTRA_DIST = $(man_MANS)
